[metadata]
name = deepdmr
summary = Implementation of Deep Dirichlet Multinomial Regression in python: DMR with document priors learned by neural network
author = Adrian Benton
author-email = adrian.benton@gmail.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix

[files]
packages = deepdmr

[extension=deepdmr._sample]
sources =
    _sample.c
    gamma.c

[sdist]
pre-hook.sdist_pre_hook = deepdmr._setup_hooks.sdist_pre_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
